--- a/po/ja/init.po
+++ b/po/ja/init.po
@@ -1,48 +1,76 @@
+# header
+msgid ""
+msgstr "Content-Type: text/plain; charset=UTF-8\n"
+
 #: init.sh:22
 msgid "Enter certificate common name: "
 msgstr "証明書のCommon nameを入力してください: "
+
 #: init.sh:34
 msgid "Use AES encryption? (N/y) "
 msgstr "アップデートイメージを暗号化しますか？ (N/y) "
-#: init.sh:56
+
+#: init.sh:55
 msgid "Allow updates signed by Atmark Techno? (Y/n) "
-msgstr "アットマークテクノが作成したイメージをインストール可能にしますか？ (Y/n) "
-#: init.sh:59
+msgstr ""
+"アットマークテクノが作成したイメージをインストール可能にしますか？ (Y/n) "
+
+#: init.sh:58
 msgid "root password: "
 msgstr "rootパスワード: "
-#: init.sh:62
+
+#: init.sh:61
 msgid "A root password is required"
 msgstr "rootパスワードが必要です。"
-#: init.sh:65
+
+#: init.sh:64
 msgid "root password (confirm): "
 msgstr "rootパスワード（確認）: "
-#: init.sh:68
+
+#: init.sh:67
 msgid "Passwords do not match"
 msgstr "パスワードが一致しません"
-#: init.sh:72
+
+#: init.sh:71
 msgid "Could not hash password"
 msgstr "パスワードを作成できませんでした。"
-#: init.sh:77
+
+#: init.sh:76
 msgid "atmark user password (empty = same as root): "
 msgstr "atmarkユーザのパスワード（空の場合はrootパスワードを使います）: "
-#: init.sh:79
+
+#: init.sh:78
 msgid "atmark user password (confirm): "
 msgstr "atmarkユーザのパスワード（確認）: "
-#: init.sh:95
+
+#: init.sh:97
 msgid "Could not copy initial_setup.desc from example dir"
 msgstr "initial_setup.descをコピーできませんでした"
-#: init.sh:99
+
+#: init.sh:101
 msgid "Could not update $desc"
 msgstr "$descを更新できませんでした"
-#: init.sh:109
+
+#: init.sh:111
 msgid "Could not generate initial setup swu"
 msgstr "最初書き込みのinitial_setup.swuの作成が失敗しました。"
+
 #: init.sh:113
-msgid "You can use \\\"$SCRIPT_DIR/initial_setup.swu\\\" as is or regenerate an image"
-msgstr "\\\"$SCRIPT_DIR/initial_setup.swu\\\" をそのまま使えますが、追加 desc を入れたかったら"
+msgid ""
+"You can use \\\"$SCRIPT_DIR/initial_setup.swu\\\" as is or regenerate an "
+"image"
+msgstr ""
+"\\\"$SCRIPT_DIR/initial_setup.swu\\\" をそのまま使えますが、追加 desc を入れ"
+"たかったら"
+
 #: init.sh:114
-msgid "with extra modules with \\\"$SCRIPT_DIR/mkimage.sh\\\" \\\"$SCRIPT_DIR/initial_setup.desc\\\" other_desc_files"
-msgstr "このコマンドで作成してください： \\\"$SCRIPT_DIR/mkimage.sh\\\" \\\"$SCRIPT_DIR/initial_setup.desc\\\" other_desc_files"
+msgid ""
+"with extra modules with \\\"$SCRIPT_DIR/mkimage.sh\\\" \\\"$SCRIPT_DIR/"
+"initial_setup.desc\\\" other_desc_files"
+msgstr ""
+"このコマンドで作成してください： \\\"$SCRIPT_DIR/mkimage.sh\\\" \\"
+"\"$SCRIPT_DIR/initial_setup.desc\\\" other_desc_files"
+
 #: init.sh:123
 msgid "Config $CONFIG not found"
 msgstr "$CONFIG を見つかりませんでした。"
