--- a/po/ja/mkimage.po
+++ b/po/ja/mkimage.po
@@ -94,310 +94,335 @@ msgstr ""
 
 #: mkimage.sh:77
 msgid "Cannot find source file: %s"
-msgstr ""
+msgstr "%s ファイルを見つかりませんでした。"
 
 #: mkimage.sh:82
 msgid "Could not remove previous link at %s"
-msgstr ""
+msgstr "以前存在していた %s を削除できませんでした。"
 
 #: mkimage.sh:85
 msgid "Could not remove previous file at %s"
-msgstr ""
+msgstr "以前存在していたファイル %s を削除できませんでした。"
 
 #: mkimage.sh:93
 msgid "Could not copy %s to %s"
-msgstr ""
+msgstr "%s を %s にコピーできませんでした。"
 
 #: mkimage.sh:95
 msgid "Could not link %s to %s"
-msgstr ""
+msgstr "%s を %s にリンクできませんでした。"
 
 #: mkimage.sh:121
+#, fuzzy
 msgid ""
 "AES encryption key %s was set but not found.\\nPlease create it with genkey."
-"sh --aes \\\"%s\\\""
+"sh --aes"
 msgstr ""
+"暗号化鍵が設定されてますが %s が存在しません。\\ngenkey.sh --aesで作成してく"
+"ださい。"
 
 #: mkimage.sh:139
 msgid "failed to compress %s"
-msgstr ""
+msgstr "%s を圧縮できませんでした。"
 
 #: mkimage.sh:152
 msgid "Missing source file: %s"
-msgstr ""
+msgstr "%s のソースファイルが存在しません。"
 
 #: mkimage.sh:197
 msgid "failed to encrypt %s"
-msgstr ""
+msgstr "%s を暗号化できませんでした。"
 
 #: mkimage.sh:214
 msgid "Checksumming %s failed"
-msgstr ""
+msgstr "%s のチェックサムができませんでした。"
 
 #: mkimage.sh:224
 msgid "component %s was set with empty version"
-msgstr ""
+msgstr "%s のバージョンcomponentにバージョンが足りません。"
 
 #: mkimage.sh:236
 msgid ""
 "Version %s must be x.y.z.t (numbers < 65536 only) or x.y.z-t (x-z numbers "
 "only)"
 msgstr ""
+"%s のバージョンは x.y.z.t (<65536の数字のみ)か x.y.z-t (x-z 数字のみ）にして"
+"ください。"
 
 #: mkimage.sh:249
 msgid "base_os version %s must be in x[.y[.z]]-t format"
-msgstr ""
-
-#: mkimage.sh:261
-msgid "version check failed: %s"
-msgstr ""
+msgstr "base_os のバージョン %s はx[.y[.z]]-tにしてください。"
 
 #: mkimage.sh:264
+msgid "version check failed for %s: %s must be <= %s"
+msgstr "%s バージョンの %s を %s 以下にしてください。"
+
+#: mkimage.sh:265
+msgid "version check failed for %s: %s must not mix alpha and digits"
+msgstr "%s バージョンの %s を数字とローマ字が混ざってます。"
+
+#: mkimage.sh:289
+msgid ""
+"metadata (+ part) in semver are ignored by swupdate, please use something "
+"else than %s"
+msgstr ""
+"%s バージョンに+がありますが、swupdateがその部分を無視します。他を使ってくだ"
+"さい。"
+
+#: mkimage.sh:292
 msgid "install_if must be higher or different"
-msgstr ""
+msgstr "install_ifは「higher」か「different」にしてください。"
 
-#: mkimage.sh:266
+#: mkimage.sh:294
 msgid "component must not contain spaces (%s)"
-msgstr ""
+msgstr "バージョンの component %s にスペースを入れないでください。"
 
-#: mkimage.sh:267
+#: mkimage.sh:295
 msgid "version must not contain spaces (%s = %s)"
-msgstr ""
+msgstr "バージョンの %s = %s にスペースを入れないでください。"
 
-#: mkimage.sh:275
+#: mkimage.sh:303
 msgid "version %s was set without associated component"
-msgstr ""
+msgstr "バージョン %s に component はありません！"
 
-#: mkimage.sh:279
+#: mkimage.sh:307
 msgid "use as main version requested but component/version not set?"
-msgstr ""
+msgstr "--main-versionが設定されましたが、バージョンがありません。"
 
-#: mkimage.sh:325
+#: mkimage.sh:353
 msgid "%s requires an argument"
-msgstr ""
+msgstr "%s に引数が必要です。"
 
-#: mkimage.sh:330
+#: mkimage.sh:358
 msgid "%s requires <component> <version> arguments"
-msgstr ""
+msgstr "%s に <component> <version> の引数が必要です。"
 
-#: mkimage.sh:343
+#: mkimage.sh:371
 msgid "--install-if must be higher or different"
-msgstr ""
+msgstr "--install-if は「higher」か「different」にしてください。"
 
-#: mkimage.sh:349
+#: mkimage.sh:377
 msgid "%s only allowed for swdesc_files and swdesc_tar"
-msgstr ""
+msgstr "%s は swdesc_files か swdesc_tar にしか使えません。"
 
-#: mkimage.sh:363
+#: mkimage.sh:391
 msgid "%s only allowed for swdesc_files"
-msgstr ""
+msgstr "%s は swdesc_files にしか使えません。"
 
-#: mkimage.sh:374
+#: mkimage.sh:402
 msgid "%s is not a known %s argument"
-msgstr ""
+msgstr "%s は %s の引数ではありません。"
 
-#: mkimage.sh:384
+#: mkimage.sh:412
 msgid "Usage: swdesc_boot [options] boot_file"
 msgstr ""
 
-#: mkimage.sh:389
+#: mkimage.sh:417
 msgid "Usage: swdesc_tar [options] file.tar"
 msgstr ""
 
-#: mkimage.sh:394
+#: mkimage.sh:422
 msgid "Usage: swdesc_files [options] file [files...]"
 msgstr ""
 
-#: mkimage.sh:399
+#: mkimage.sh:427
 msgid "Usage: swdesc_command [options] cmd [cmd..]"
 msgstr ""
 
-#: mkimage.sh:407
+#: mkimage.sh:435
 msgid "Usage: swdesc_script [options] script"
 msgstr ""
 
-#: mkimage.sh:412
+#: mkimage.sh:440
 msgid "Usage: swdesc_exec [options] file command"
 msgstr ""
 
-#: mkimage.sh:422
+#: mkimage.sh:450
 msgid "Usage: %s [options] image"
 msgstr ""
 
-#: mkimage.sh:426
+#: mkimage.sh:454
 msgid "Unhandled command %s"
-msgstr ""
+msgstr "%s コマンドが分かりません。"
 
-#: mkimage.sh:447
+#: mkimage.sh:475
 msgid "Cannot stat boot file: %s"
-msgstr ""
+msgstr "%s ファイルをアクセスできません。"
 
-#: mkimage.sh:449
+#: mkimage.sh:477
 msgid "BOOT_SIZE set smaller than boot file actual size"
-msgstr ""
-
-#: mkimage.sh:466
-msgid "Version component for swdesc_boot must be set to boot"
-msgstr ""
-
-#: mkimage.sh:470
-msgid "Could not guess boot version in %s"
-msgstr ""
+msgstr "BOOT_SIZE変数はファイルサイズより小さかったです。"
 
 #: mkimage.sh:494
+msgid "Version component for swdesc_boot must be set to boot"
+msgstr "swdesc_bootのバージョンcomponentを「boot」にしてください。"
+
+#: mkimage.sh:498
+msgid "Could not guess boot version in %s"
+msgstr "bootのバージョンを %s に読み取れませんでした。"
+
+#: mkimage.sh:522
 msgid "OS update must have an absolute dest (was: %s)"
 msgstr "OS アップデートの場合は絶対パスを使ってください (%s)"
 
-#: mkimage.sh:505
+#: mkimage.sh:533
 msgid ""
 "OS is only writable for base/extra_os updates and dest (%s) is not within "
 "volumes"
 msgstr ""
+"%s はボリュームのアップデートではないので、base/extra_os以外に使えません。"
 
-#: mkimage.sh:508
-msgid ".. is not allowed in destination path for os"
-msgstr ""
+#: mkimage.sh:536
+msgid ".. is not allowed in destination path for volume update"
+msgstr ".. を展開先に使えません。"
 
-#: mkimage.sh:520
+#: mkimage.sh:548
 msgid "Warning: automatically setting --preserve-attributes for base_os update"
 msgstr ""
+"Warning: base_osアップデートで--preserve-attributesを自動的に設定しました。"
 
-#: mkimage.sh:554
+#: mkimage.sh:582
 msgid ""
 "%s does not exist\\nplease note swdesc_files syntax changed and no longer "
 "requires setting a name"
 msgstr ""
 
-#: mkimage.sh:562
+#: mkimage.sh:590
 msgid "%s does not exist?"
-msgstr ""
+msgstr "%s は存在しません。"
 
-#: mkimage.sh:564
+#: mkimage.sh:592
 msgid "%s is not inside %s"
-msgstr ""
+msgstr "%s は %s の下ではありません。"
 
-#: mkimage.sh:577
+#: mkimage.sh:605
 msgid "Could not create tar for %s"
-msgstr ""
+msgstr "%s のtarを作成できませんでした。"
 
-#: mkimage.sh:724
+#: mkimage.sh:752
 msgid ""
 "Warning: podman does not handle compressed container images without an extra "
 "uncompressed copy"
-msgstr ""
+msgstr "Warning: podmanでは、圧縮するとコピーの回数が増えます。"
 
-#: mkimage.sh:725
+#: mkimage.sh:753
 msgid "you might want to keep the archive as simple .tar"
-msgstr ""
+msgstr "普通の.tarにした方が効率的です。"
 
-#: mkimage.sh:748
+#: mkimage.sh:776
 msgid "Could not create script.tar"
-msgstr ""
+msgstr "script.tarを作成で来ませんでした。"
 
-#: mkimage.sh:772
+#: mkimage.sh:800
 msgid "DESCRIPTION must be set"
-msgstr ""
+msgstr "DESCRIPTION変数を設定してください。"
 
-#: mkimage.sh:789
+#: mkimage.sh:817
 msgid "HW_COMPAT or HW_COMPAT_%s must be set"
-msgstr ""
+msgstr "HW_COMPATかHW_COMPAT_%s変数を設定してください。"
 
-#: mkimage.sh:808
+#: mkimage.sh:836
 msgid "HW_COMPAT must be set"
-msgstr ""
+msgstr "HW_COMPAT変数を設定してください。"
 
-#: mkimage.sh:833
+#: mkimage.sh:861
 msgid ""
 "above component used multiple times with different versions or install-if "
 "mode"
-msgstr ""
+msgstr "上記のcomponentを別のバージョンかinstall-ifで使われました。"
 
-#: mkimage.sh:837
+#: mkimage.sh:865
 msgid "No versions found: empty image?\\nSet FORCE_VERSION=1 to allow building"
 msgstr ""
-
-#: mkimage.sh:846
-msgid ""
-"invalid POST_ACTION \\\"$POST_ACTION\\\", must be empty, poweroff or wait"
-msgstr ""
-
-#: mkimage.sh:863
-msgid "Please set user passwords (usermod command in .desc)"
-msgstr ""
-
-#: mkimage.sh:872
-msgid "PRIVKEY must be set"
-msgstr ""
-
-#: mkimage.sh:873
-msgid "PUBKEY must be set"
-msgstr ""
+"バージョンを見つかりませんでした。--versionかFORCE_VERSION=1を使ってくださ"
+"い。"
 
 #: mkimage.sh:874
-msgid "Cannot read PRIVKEY: %s"
+msgid "invalid POST_ACTION \\\"%s\\\", must be empty, poweroff or wait"
 msgstr ""
+"POST_ACTION %s が間違ってます。（empty, poweroff, waitのどれかにしてくださ"
+"い）"
 
-#: mkimage.sh:875
-msgid "Cannot read PUBKEY: %s"
+#: mkimage.sh:891
+msgid "Please set user passwords (usermod command in .desc)"
 msgstr ""
-
-#: mkimage.sh:881
-msgid "Could not sign %s"
-msgstr ""
-
-#: mkimage.sh:894
-msgid "Could not enter %s"
-msgstr ""
+"ユーザーのパスワードを指定してください（.descファイルのusermodコマンド）"
 
 #: mkimage.sh:900
+msgid "PRIVKEY must be set"
+msgstr "PRIVKEY変数を設定してください。"
+
+#: mkimage.sh:901
+msgid "PUBKEY must be set"
+msgstr "PUBKEY変数を設定してください。"
+
+#: mkimage.sh:902
+msgid "Cannot read PRIVKEY: %s"
+msgstr "PRIVKEY %s を読み取れません。"
+
+#: mkimage.sh:903
+msgid "Cannot read PUBKEY: %s"
+msgstr "PUBKEY %s を読み取れません。"
+
+#: mkimage.sh:909
+msgid "Could not sign %s"
+msgstr "%s を証明できませんでした。"
+
+#: mkimage.sh:922
+msgid "Could not enter %s"
+msgstr "%s ディレクトリに入れませんでした。"
+
+#: mkimage.sh:928
 msgid ""
 "cpio does not contain files we requested (in the order we requested): check "
 "%s"
 msgstr ""
 
-#: mkimage.sh:961
+#: mkimage.sh:989
 msgid "Could not update default config"
-msgstr ""
+msgstr "デフォルトのコンフィグファイルをアップデートできませんでした。"
 
-#: mkimage.sh:974
+#: mkimage.sh:1002
 msgid "Could not get script dir"
-msgstr ""
+msgstr "スクリプトのディレクトリが読み取れませんでした。"
 
-#: mkimage.sh:1012
+#: mkimage.sh:1040
 msgid "%s must end with .swu"
-msgstr ""
+msgstr "%s は「.swu」で終わらせてください。"
 
-#: mkimage.sh:1036
+#: mkimage.sh:1064
 msgid "%s does not exist"
-msgstr ""
+msgstr "%s が存在しません。"
 
-#: mkimage.sh:1054
+#: mkimage.sh:1082
 msgid "cannot enter %s directory"
-msgstr ""
+msgstr "%s ディレクトリに入れませんでした。"
 
-#: mkimage.sh:1059
+#: mkimage.sh:1087
 msgid "Cannot return to %s we were in before"
-msgstr ""
+msgstr "%s ディレクトリに戻れませんでした。"
 
-#: mkimage.sh:1063
+#: mkimage.sh:1091
 msgid "No or empty desc given?"
-msgstr ""
+msgstr "descファイルを読み取れませんでした。"
 
-#: mkimage.sh:1075
+#: mkimage.sh:1103
 msgid "----------------"
 msgstr ""
 
-#: mkimage.sh:1076
+#: mkimage.sh:1104
 msgid "You have sideloaded containers, copy all these files to USB drive:"
 msgstr ""
+"別ファイルのコンテナがあります。以下のファイルをUSBメモリにコピーしてくださ"
+"い："
 
-#: mkimage.sh:1077
+#: mkimage.sh:1105
 msgid "%s"
 msgstr ""
 
-#: mkimage.sh:1082
+#: mkimage.sh:1110
 msgid "Successfully generated %s"
-msgstr ""
+msgstr "%s を作成しました。"
 
 #: examples/enable_sshd.desc:4
 msgid "Add your keys in examples/enable_sshd/root/.ssh/authorized_keys"
@@ -408,3 +433,6 @@ msgid ""
 "You must configure HAWKBIT_URL and HAWKBIT_PASSWORD in examples/"
 "hawkbit_register.sh"
 msgstr ""
+
+#~ msgid "version check failed for %s: %s must be alphanumeric"
+#~ msgstr "%s バージョンの %s を数字かローマ字にしてください。"
