--- a/po/ja/init.po
+++ b/po/ja/init.po
@@ -95,10 +95,10 @@ msgstr ""
 #: init.sh:140
 msgid ""
 "key files means you will no longer be able to install new updates without"
-msgstr "鍵をなくしましたら新たなアップデートをクライアントの /etc/swupdate.pem"
+msgstr "鍵をなくしましたら新たなアップデートをデバイスの /etc/swupdate.pem"
 
 #: init.sh:141
-msgid "manually adjusting /etc/swupdate.pem on clients"
+msgid "manually adjusting /etc/swupdate.pem on devices"
 msgstr "を直さないとインストールできなくなります。"
 
 #: init.sh:150
