mkswu: add info message for >=2 desc files
Having no message about extra desc files make it unclear if it was really processed

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -678,6 +678,10 @@ msgid "Cannot return to %s we were in before"
 msgstr "%s ディレクトリに戻れませんでした。"
 
 #: mkswu
+msgid "Successfully included %s contents"
+msgstr "%s を組み込みました。"
+
+#: mkswu
 msgid "No or empty desc given?"
 msgstr "descファイルを読み取れませんでした。"
 
