mkswu: error if some duplicate file is generated
duplicate files would mean one will be ignored and is almost certainly an error

There are cases where we'd want this for configs with boards, but users are not
really meant to use these at this point

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -385,6 +385,11 @@ msgstr ""
 "ユーザーのパスワードを指定してください（.descファイルのusermodコマンド）"
 
 #: mkswu
+msgid ""
+"Duplicate files detected in sw-description: duplicate swdesc_* commands?\\n%s"
+msgstr ""
+
+#: mkswu
 msgid "PRIVKEY must be set"
 msgstr "PRIVKEY変数を設定してください。"
 
