Revert "remove podman_partial_image.sh"
This reverts commit 37209d1b2755887c2a43332ae106139360e2b6cd.

Add podman_partial_image.sh back: we want it in ATDE, and it's not
practical to get it from the atmark-x2-base alpine package.
Hopefully the script won't diverge too much...

--- a/README
+++ b/README
@@ -131,6 +131,13 @@ swdesc_pull_container <image url>
   Pull container from network into storage
 
 
+## podman_partial_image.sh
+
+Generate image file from tags or image ids.
+If a base image/tag is given, remove objects from image file that
+were used in base image.
+
+
 ## examples
 
 Sample config files, try from git root:
