swupdate_post: forcefully kill swupdate after poweroff/reboot
calling poweroff/reboot then just waiting will cause the shutdown scripts
to kill swupdate softly enough to make it print failure messages.
There is no failure here, and we won't be installing any other
update this cycle, so just forcibly kill all swupdate processes

--- a/Changelog
+++ b/Changelog
@@ -31,6 +31,8 @@ $HOME/mkswu
 fixes:
  - examples/kernel_update_plain: fix comment, add modules
  - swdesc_tar/files: create destination directory if absent
+ - kill swupdate post-update instead of waiting for openrc
+ to do it with plenty of failure messages
 
 
 3.15-at.1
