--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -132,7 +132,7 @@ msgstr ""
 msgid "version check failed for %s: %s must be <= %s"
 msgstr ""
 #: mkswu
-msgid "version check failed for %s: %s must not mix alpha and digits"
+msgid "version check failed for %s: %s must not mix alpha and digits\\ne.g.\\n\\t1.2.3-rc.4\\n\\t1.2.3.4\\n\\t1.2.3-4"
 msgstr ""
 #: mkswu
 msgid "metadata (+ part) in semver are ignored by swupdate, please use something else than %s"
